# TobyLauncher

./: GPLAY_PRIVACY_POLICY.md  PRIVACY_POLICY_BN.md  PRIVACY_POLICY_ru.md  README.md  README_BN.md  README_RU.md  gradle.properties  mojo_upload.jks  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android.yml  nightly.yml  release.yml
app_pojavlauncher/: build.gradle  pojav_gplay.jks  pojav_pub.jks  pojav_release.jks  pojav_upload.jks
app_pojavlauncher/src/main/: AndroidManifest.xml  AndroidManifest.xmlm
app_pojavlauncher/src/main/assets/: cert.pem  substitutions.json
app_pojavlauncher/src/main/jni/: Android.mk  CMakeLists.txt  awt_bridge.c  elf_defs.h  minibridge.c  pojavexec.h  stdio_is.c  utils.c  utils.h  vulkan_loader.c
app_pojavlauncher/src/main/jni/driver_helper/: android_namespace_func.h  func_locator.c  nsbypass.c
app_pojavlauncher/src/main/jni/jre_launcher/: abort_wait.c  elf_hinter.c  elf_hinter.h  jre_launcher.c  load_stages.h  native_library_hook.c
app_pojavlauncher/src/main/jni/jvm_hooks/: emui_iterator_fix_hook.c  java_exec_hooks.c  lwjgl_dlopen_hook.c
app_pojavlauncher/src/main/jni/native_hooks/: exit_hook.c
app_pojavlauncher/src/main/res/drawable/: ic_filter.xml  ic_microphone.xml  ic_px_bell.xml  ic_px_console.xml  ic_px_experiment.xml  ic_px_file_dl.xml  ic_px_letters.xml  ic_px_pointer_size.xml  ic_px_ram.xml  ic_px_runtime_mgr.xml  ic_px_sharelog.xml  ic_px_switch_arrows_x.xml  ic_px_translate.xml  ic_px_verify_hash.xml  ic_px_volcano.xml  (+4 more)
app_pojavlauncher/src/main/res/drawable-uk/: ic_social_media.xml
(+219 files in other folders)
